Fix canvas z-index when viewing post

--- a/blocks/motion-background/editor.scss
+++ b/blocks/motion-background/editor.scss
@@ -20,3 +20,7 @@
 		flex-grow: 1;
 	}
 }
+
+.wp-block-a8c-motion-background-canvas {
+	z-index: 0;
+}
