--- a/blocks/motion-background/style.scss
+++ b/blocks/motion-background/style.scss
@@ -18,4 +18,5 @@
 	height: 100%;
 	top: 0;
 	left: 0;
+	z-index: -1;
 }
